# mgy-bot

./: .env.example  .gitignore  README.md  alembic.ini  bot.py  database.py  main.py  pyproject.toml
bot/: __init__.py  bot.py  database.py
cogs/: __init__.py  events.py  games.py  level.py  max.py  mod.py  music.py
games/: crappyDungeonCrawlerForPython.py
models/: __init__.py  base.py  levels.py  musics.py  servers.py  user_servers.py  users.py
models/migrations/: env.py
models/migrations/versions/: 202311122125_b3faf853662b_initial_migration.py  202311122126_27f64c192856_migrate_data.py  202311122127_7d95a89af124_remove_old_tables.py  202311221508_dca2717b4ba6_userservers.py
repositories/: __init__.py  base.py  levels.py  musics.py  servers.py  user_servers.py  users.py
services/: spotify.py  youtube.py
utils/: __init__.py  cmdline.py  constant.py  functions.py  logger.py  pgdatabase.py  twitch.py  twitchWebHook.py
