[tool.poetry]
name = "mgy-bot"
version = "0.1.0"
description = ""
authors = ["Lucas Souto <lucassouto@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
discord-py = "^2.3.2"
dnspython = "^2.4.2"
pynacl = "^1.5.0"
async-timeout = "^4.0.3"
youtube-dl-server = "^0.3"
youtube-dl = "^2021.12.17"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.3"
requests = "^2.31.0"
requests-html = "^0.10.0"
psycopg2-binary = "^2.9.9"
urllib3 = "^2.0.7"
google-api-python-client = "^2.107.0"
google-api-python-client-stubs = "^1.20.1"
spotipy = "^2.23.0"
python-dotenv = "^1.0.0"
pycord = "^0.1.1"
yt-dlp = "^2023.10.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
